[package]
name = "eve_mapmaker"
version = "0.1.0"
description = "A Tauri App"
authors = ["donat fortini"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }


[dependencies]
tauri = { version = "1", features = [ "dialog-open", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"
reqwest = { version = "0.12.7", features = ["stream"] }
tokio = { version = "1.40", features = ["full"] }
scraper = "0.20.0"
image = "0.25.2"
rayon = "1.5.1"
futures-util = "0.3.17"


[dependencies.pyo3]
version = "0.22.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
extension-module = ["pyo3/extension-module"]
